<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rest Client Template</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="profile_image_description">description</string>
    <string name="title_activity_activity_compose_tweet">ActivityComposeTweet</string>
    <string name="compose_tweet">Write a Tweet</string>
    <string name="clear_compose_tweet">Clear</string>
    <string name="send_tweet">Send</string>
    <string name="cancel_compose_tweet">Cancel</string>
    <string name="add_tweet">Add Tweet</string>
    <string name="tweet_posted">Tweet Posted</string>
    <string name="tweet_failed">Tweet Failed</string>
    <string name="characters_left">Characters left: %1$d</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Log out</string>
    <string name="tweet_prompt">What is happening ?</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_tweeter_detail">TweeterDetailActivity</string>
    <string name="retweet_success">Retweeted</string>
    <string name="retweet_failure">Retweet failed</string>
    <string name="favorite_failure">Favorite Failure</string>
    <string name="tweets_count">TWEETS</string>
    <string name="followers_count">FOLLOWERS</string>
    <string name="following_count">FOLLOWING</string>
    <string name="retweets_count">RETWEETS</string>
    <string name="favorites_count">FAVORITES</string>

    <string name="retweet_dialog_title">Retweet</string>
    <string name="retweet_dialog_prompt">Retweet this to your followers?</string>
    <string name="retweet_dialog_cancel">Cancel</string>
    <string name="retweet_dialog_quote">Quote</string>
    <string name="retweet_dialog_retweet">Retweet</string>

</resources>