<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:divider="@drawable/horizontal_divider"
    android:showDividers="middle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_height="68dp"
        android:textSize="20sp"
        android:text="@string/retweet_dialog_prompt"/>

    <LinearLayout
        android:divider="@drawable/vertical_divider"
        android:showDividers="middle"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <FrameLayout
            android:id="@+id/flRetweetCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/retweet_dialog_cancel"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/flRetweetQuote"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/retweet_dialog_quote"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/flRetweetDo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/retweet_dialog_retweet"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>