<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComposeTweetActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:layout_height="wrap_content"
            android:text="@string/cancel_compose_tweet"
            style="@style/MT.SmallButton.Grey"
            android:layout_width="wrap_content"
            />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_compose_tweet"
            style="@style/MT.SmallButton.Grey"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_tweet"
            style="@style/MT.SmallButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/ivThumb"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>


        <TextView
            android:id="@+id/tvComposeTweetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_toRightOf="@+id/ivThumb"/>

        <EditText
            android:id="@+id/etTweetContents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ivThumb"
            android:layout_below="@+id/ivThumb"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:maxLength="140"
            android:inputType="textMultiLine"
            android:hint="@string/tweet_prompt"
            >

            <requestFocus />
        </EditText>



        <TextView
            android:id="@+id/tvCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/etTweetContents"
            android:layout_alignLeft="@+id/etTweetContents"
            android:layout_alignStart="@+id/etTweetContents"
            android:text="@string/characters_left"
            style="@style/MT.GrayText"
            android:layout_marginTop="22dp" />




    </RelativeLayout>



</LinearLayout>