<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:divider="@drawable/horizontal_divider"
    android:showDividers="middle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBgProfile"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#a3acb2"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frmImage"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:src="@drawable/rounded_white_frame"
                     />

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvName"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frmImage"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvName"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/vertical_divider"
        android:showDividers="middle"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/MT.profileTabs">

            <TextView
                android:id="@+id/tvTweets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MT.profileTabsTitle"
                android:text="@string/tweets_count"/>
        </LinearLayout>

        <LinearLayout
            style="@style/MT.profileTabs">

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MT.profileTabsTitle"
                android:text="@string/followers_count"/>
        </LinearLayout>

        <LinearLayout
            style="@style/MT.profileTabs">

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MT.profileTabsTitle"
                android:text="@string/following_count"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>